--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="header">
      <div class="container">
         <nav>
-            <img src="images/logo.jpg" class="logo">
+            <img src="logo.jpg" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/IMG_7784.jpg"><br>
+                    <img src="IMG_7784.jpg"><br>
                 </div>
                 <div class="about-col-2">
                    <h1 class = "sub-title"> About Me</h1><br>
@@ -120,7 +120,7 @@
         <h1 class="sub-title">My Work</h1><br>
         <div class="work-list">
             <div class="work">
-                <img src="images/waste.jpeg">
+                <img src="waste.jpeg">
                 <div class="layer">
                 <h3> Arduino Uno Powered Waste Classification System </h3>
                 <p> "I developed a Smart Waste Bin using an Arduino Uno board integrated with ultrasonic sensors, a moisture sensor, and a metal detector.</p>
@@ -128,7 +128,7 @@
             </div>
             </div> 
             <div class="work">
-                <img src="images/flight.jpg">
+                <img src="flight.jpg">
                 <div class="layer">
                 <h3> AirEase: Full-Stack Flight Booking Platform</h3>
                 <p> "I built a fully functional Flight Booking Website using modern web technologies, covering both front-end and back-end development.</p>
@@ -136,7 +136,7 @@
             </div>
             </div> 
             <div class="work">
-                <img src="images/fire.jpeg">
+                <img src="fire.jpeg">
                 <div class="layer">
                 <h3> FireVision: Deep Learning-Based Fire Detection</h3>
                 <p> "I developed a real-time Fire Detection System using CCTV footage and Convolutional Neural Networks (CNNs).</p>
@@ -144,7 +144,7 @@
             </div>
             </div> 
             <div class="work">
-                <img src="images/image1.png">
+                <img src="image1.png">
                 <div class="layer">
                 <h3> Creative Tech Portfolio</h3>
                 <p> "This portfolio website serves as a personal showcase of my technical projects, skills, and services.</p>
