--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <a href="https://www.linkedin.com/in/harivaram-pooja-rai-a7bba12a2" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a> 
                 </div>
-                <a href="pooja_resume.pdf" class ="btn btn2">Download CV</a>
+                <a href="RenderCV_EngineeringResumes_Theme (1).pdf" class ="btn btn2">Download CV</a>
             </div>
                 <div class="contact-right">
                 <form name="submit-to-google-sheet">
